syntax = "proto3";

package lessworkflow.action;

option go_package = "github.com/albertsen/lessworkflow/gen/proto/action";

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "proto/processdef/processdef.proto";

message Action {
  string name = 1;
  string process_id = 2;
  int32 retry_count = 3;
  google.protobuf.Timestamp delay_util = 4;
  lessworkflow.processdef.ProcessDef processDef = 5;
  google.protobuf.Any payload = 6;
};

